# miner

./: .env.template  .gitignore  Cargo.toml  DESIGN_PLAN.md  IMPLEMENTATION_PLAN.md  PQ_MIGRATION_PLAN.md  README.md  audit_actions.md  boinc.optimisations.md  build.rs  hashrate.md  test.sh
.github/: dependabot.yml
docs/: BOINC_PROJECT_MANAGEMENT.md  COMMAND_LINE_INTERACTIVE.md  README.md  SELF_SETUP_CONFIGURATION.md  SUBMISSION_TRACKING.md  TASK_CONTINUATION.md  UI_EXPRESSIVENESS.md  WORK_TYPE_MANAGEMENT.md
src/: boinc_client.rs  boinc_compat.rs  config.rs  console_display.rs  crypto.rs  hardware_detection.rs  integration_example.rs  lib.rs  main.rs  miner_core.rs  miner_tui.rs  nuw_worker.rs  oracle.rs  oracle_profile.rs  performance_monitor.rs  project_preferences.rs  rate_limiter.rs  resource_manager.rs  security_logger.rs  zk_verifier.rs
src/boinc/: configuration.rs  installation.rs  mod.rs  process_management.rs  runner.rs  work_processing.rs
