[workspace]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Silica-Protocol/miner"

[workspace.dependencies]
# Internal - Git dependencies
silica-models = { git = "https://github.com/Silica-Protocol/protocol-core", branch = "main" }

# Core async
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde", "pkcs8"] }
rand = { version = "0.8.4", features = ["getrandom"] }
hex = "0.4"
argon2 = "0.5"
subtle = "2.5"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
num_cpus = "1.16"
flate2 = "1.0"
tar = "0.4"
zip = "6.0"
base64 = "0.22"

# Dev
tempfile = "3.14"

[package]
name = "silica-miner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mining client for Silica Protocol Network Utility Work (NUW)"

[features]
default = ["sysinfo"]
sysinfo = ["dep:sysinfo"]

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
base64 = { workspace = true }
num_cpus = { workspace = true }
sha3 = { workspace = true }

# System monitoring
sysinfo = { version = "0.29", optional = true }
crossterm = "0.27"
ratatui = "0.24"

# Shared models
silica-models = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

# Cryptography for NUW
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3