[workspace]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Silica-Protocol/miner"

[workspace.dependencies]
# ============================================================================
# INTERNAL DEPENDENCIES
# ============================================================================
silica-models = { git = "https://github.com/Silica-Protocol/protocol-core", branch = "main" }

# ============================================================================
# ASYNC RUNTIME
# ============================================================================
tokio = { version = "=1.45.1", features = ["full"] }

# ============================================================================
# SERIALIZATION - Locked for ABI stability
# ============================================================================
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"

# ============================================================================
# ERROR HANDLING
# ============================================================================
anyhow = "1.0"

# ============================================================================
# TIME
# ============================================================================
chrono = { version = "=0.4.42", default-features = false, features = ["serde", "std", "clock"] }

# ============================================================================
# LOGGING
# ============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================================================
# NETWORKING
# ============================================================================
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# ============================================================================
# CRYPTOGRAPHY - MISSION CRITICAL - LOCKED
# ============================================================================
sha2 = "=0.10.9"
hex = "=0.4.3"
argon2 = "=0.5.3"
subtle = "=2.6.1"
ed25519-dalek = { version = "=2.2.0", features = ["serde", "pkcs8", "rand_core"] }
pqcrypto-dilithium = "=0.5.0"
pqcrypto-traits = "=0.3.5"

# ============================================================================
# UTILITIES
# ============================================================================
num_cpus = "1.16"

# ============================================================================
# DEV
# ============================================================================
tempfile = "3.14"

# ============================================================================
# PROFILES
# ============================================================================
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# ============================================================================
# PACKAGE
# ============================================================================
[package]
name = "silica-miner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mining client for Silica Protocol Network Utility Work (NUW)"

[lib]
name = "miner"
path = "src/lib.rs"

[[bin]]
name = "silica-miner"
path = "src/main.rs"

[features]
default = ["sysinfo"]
sysinfo = ["dep:sysinfo"]

[dependencies]
# Core
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
num_cpus = { workspace = true }

# System monitoring
sysinfo = { version = "0.29", optional = true }
crossterm = "0.27"
ratatui = "0.24"

# Shared models
silica-models = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }

# Cryptography for NUW
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
